--- a/Starter_Code/etf_analyzer.ipynb
+++ b/Starter_Code/etf_analyzer.ipynb
@@ -640,21 +640,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-08-05 00:00:00.000000</td>\n",
+       "      <td>202.920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-08-06 00:00:00.000000</td>\n",
+       "      <td>204.090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-08-25 00:00:00.000000</td>\n",
+       "      <td>201.710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-08-26 00:00:00.000000</td>\n",
+       "      <td>203.530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-08-27 00:00:00.000000</td>\n",
+       "      <td>204.340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-08-28 00:00:00.000000</td>\n",
+       "      <td>204.480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-08-31 00:00:00.000000</td>\n",
+       "      <td>203.950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020-09-01 00:00:00.000000</td>\n",
+       "      <td>208.920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020-09-02 00:00:00.000000</td>\n",
+       "      <td>210.820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2020-09-03 00:00:00.000000</td>\n",
+       "      <td>205.070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2020-10-12 00:00:00.000000</td>\n",
+       "      <td>201.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2020-10-13 00:00:00.000000</td>\n",
+       "      <td>207.730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2020-10-14 00:00:00.000000</td>\n",
+       "      <td>203.660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2020-10-15 00:00:00.000000</td>\n",
+       "      <td>203.170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2020-10-16 00:00:00.000000</td>\n",
+       "      <td>204.540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2020-10-19 00:00:00.000000</td>\n",
+       "      <td>200.050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2020-10-20 00:00:00.000000</td>\n",
+       "      <td>201.960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2020-10-21 00:00:00.000000</td>\n",
+       "      <td>213.060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2020-10-22 00:00:00.000000</td>\n",
+       "      <td>203.880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2020-10-23 00:00:00.000000</td>\n",
+       "      <td>203.040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2020-10-27 00:00:00.000000</td>\n",
+       "      <td>200.440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2020-11-05 00:00:00.000000</td>\n",
+       "      <td>204.590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2020-11-06 00:00:00.000000</td>\n",
+       "      <td>202.720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2020-11-23 00:00:00.000000</td>\n",
+       "      <td>200.820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2020-11-24 00:00:00.000000</td>\n",
+       "      <td>206.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2020-11-25 00:00:00.000000</td>\n",
+       "      <td>214.380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2020-11-27 00:00:00.000000</td>\n",
+       "      <td>211.320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2020-11-30 00:00:00.000000</td>\n",
+       "      <td>214.200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2020-12-01 00:00:00.000000</td>\n",
+       "      <td>216.520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2020-12-02 00:00:00.000000</td>\n",
+       "      <td>212.660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2020-12-03 00:00:00.000000</td>\n",
+       "      <td>214.680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2020-12-04 00:00:00.000000</td>\n",
+       "      <td>217.235</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          time    close\n",
+       "0   2020-08-05 00:00:00.000000  202.920\n",
+       "1   2020-08-06 00:00:00.000000  204.090\n",
+       "2   2020-08-25 00:00:00.000000  201.710\n",
+       "3   2020-08-26 00:00:00.000000  203.530\n",
+       "4   2020-08-27 00:00:00.000000  204.340\n",
+       "5   2020-08-28 00:00:00.000000  204.480\n",
+       "6   2020-08-31 00:00:00.000000  203.950\n",
+       "7   2020-09-01 00:00:00.000000  208.920\n",
+       "8   2020-09-02 00:00:00.000000  210.820\n",
+       "9   2020-09-03 00:00:00.000000  205.070\n",
+       "10  2020-10-12 00:00:00.000000  201.500\n",
+       "11  2020-10-13 00:00:00.000000  207.730\n",
+       "12  2020-10-14 00:00:00.000000  203.660\n",
+       "13  2020-10-15 00:00:00.000000  203.170\n",
+       "14  2020-10-16 00:00:00.000000  204.540\n",
+       "15  2020-10-19 00:00:00.000000  200.050\n",
+       "16  2020-10-20 00:00:00.000000  201.960\n",
+       "17  2020-10-21 00:00:00.000000  213.060\n",
+       "18  2020-10-22 00:00:00.000000  203.880\n",
+       "19  2020-10-23 00:00:00.000000  203.040\n",
+       "20  2020-10-27 00:00:00.000000  200.440\n",
+       "21  2020-11-05 00:00:00.000000  204.590\n",
+       "22  2020-11-06 00:00:00.000000  202.720\n",
+       "23  2020-11-23 00:00:00.000000  200.820\n",
+       "24  2020-11-24 00:00:00.000000  206.000\n",
+       "25  2020-11-25 00:00:00.000000  214.380\n",
+       "26  2020-11-27 00:00:00.000000  211.320\n",
+       "27  2020-11-30 00:00:00.000000  214.200\n",
+       "28  2020-12-01 00:00:00.000000  216.520\n",
+       "29  2020-12-02 00:00:00.000000  212.660\n",
+       "30  2020-12-03 00:00:00.000000  214.680\n",
+       "31  2020-12-04 00:00:00.000000  217.235"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write a SQL SELECT statement to select the time and close columns \n",
     "# where the PYPL closing price was higher than 200.0.\n",
-    "query = # YOUR CODE HERE\n",
+    "query = \"\"\"\n",
+    "SELECT \"time\", \"close\" FROM PYPL\n",
+    "WHERE \"close\" >= 200\n",
+    "\"\"\"\n",
     "\n",
     "# Using the query, read the data from the database into a Pandas DataFrame\n",
-    "pypl_higher_than_200 = # YOUR CODE HERE\n",
+    "pypl_higher_than_200 = pd.read_sql_query(query, con=engine)\n",
     "\n",
     "# Review the resulting DataFrame\n",
-    "# YOUR CODE HERE\n"
+    "pypl_higher_than_200"
    ]
   },
   {
@@ -676,19 +910,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>daily_returns</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-03-16 00:00:00.000000</td>\n",
+       "      <td>-0.164673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-11-09 00:00:00.000000</td>\n",
+       "      <td>-0.088792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-09 00:00:00.000000</td>\n",
+       "      <td>-0.084491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-02-01 00:00:00.000000</td>\n",
+       "      <td>-0.081806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-20 00:00:00.000000</td>\n",
+       "      <td>-0.074228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-03-27 00:00:00.000000</td>\n",
+       "      <td>-0.070960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-03-12 00:00:00.000000</td>\n",
+       "      <td>-0.067013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020-03-18 00:00:00.000000</td>\n",
+       "      <td>-0.065495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020-09-04 00:00:00.000000</td>\n",
+       "      <td>-0.063881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2017-11-29 00:00:00.000000</td>\n",
+       "      <td>-0.058361</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         time  daily_returns\n",
+       "0  2020-03-16 00:00:00.000000      -0.164673\n",
+       "1  2020-11-09 00:00:00.000000      -0.088792\n",
+       "2  2020-03-09 00:00:00.000000      -0.084491\n",
+       "3  2018-02-01 00:00:00.000000      -0.081806\n",
+       "4  2020-03-20 00:00:00.000000      -0.074228\n",
+       "5  2020-03-27 00:00:00.000000      -0.070960\n",
+       "6  2020-03-12 00:00:00.000000      -0.067013\n",
+       "7  2020-03-18 00:00:00.000000      -0.065495\n",
+       "8  2020-09-04 00:00:00.000000      -0.063881\n",
+       "9  2017-11-29 00:00:00.000000      -0.058361"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write a SQL SELECT statement to select the time and daily_returns columns\n",
     "# Sort the results in descending order and return only the top 10 return values\n",
-    "query = # YOUR CODE HERE\n",
+    "query = \"\"\"\n",
+    "SELECT \"time\", \"daily_returns\" FROM PYPL\n",
+    "ORDER BY \"daily_returns\" ASC\n",
+    "LIMIT 10\n",
+    "\"\"\"\n",
     "\n",
     "# Using the query, read the data from the database into a Pandas DataFrame\n",
-    "pypl_top_10_returns = # YOUR CODE HERE\n",
+    "pypl_top_10_returns = pd.read_sql_query(query, con=engine)\n",
     "\n",
     "# Review the resulting DataFrame\n",
-    "# YOUR CODE HERE\n"
+    "pypl_top_10_returns"
    ]
   },
   {
